# jira-bugzilla-integration

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  .yamllint  Dockerfile  Makefile  README.md  SECURITY.md  SUPPORT.md  asgi.py  config.yaml  docker-compose.yaml  generate-helper.sh  mypy.ini  pyproject.toml  version.json
.github/: CODEOWNERS  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: new-config.yaml
.github/workflows/: build-image.yaml  build-publish.yaml  ci.yaml  dependabot-automerge.yaml  deploy-build.yaml  gcp-deploy.yaml  labeler..yaml  labels.yaml  lint-build.yaml  lint.yaml  projectflow-lint.yaml  test-build.yaml  test.yaml
config/: config.dev.yaml  config.local.yaml  config.nonprod.yaml  config.prod.yaml  gunicorn_conf.py
config/whiteboard_tags/: README.md  TEMPLATE  example.json
core/: actions.py  config.py
diagrams/: basic_jbi_diagram.md
docs/: actions.md  deployment.md  development.md  running_locally.md  troubleshooting.md
docs/adrs/: 001-actions-reusability.md  002-action-customizaiton.md  003-bugzilla-response-codes.md
infra/: Dockerfile  detect_secrets_helper.sh  gunicorn_conf.py  lint.sh  test.sh
infra/config/: local_dev.env
jbi/: __init__.py  __main__.py  app.py  bugzilla.py  configuration.py  environment.py  errors.py  log.py  models.py  process.py  queue.py  retry.py  router.py  runner.py  services.py  steps.py
jbi/actions/: README.md  default.py  default_with_assignee_and_status.py  steps.py
jbi/bugzilla/: __init__.py  client.py  models.py  service.py
jbi/common/: instrument.py
jbi/jira/: __init__.py  client.py  md2jira.py  service.py  utils.py
jbi/services/: __init__.py  bugzilla.py  common.py  jira.py
jbi/static/: styles.css
jbi/templates/: powered_by_template.html
jbi/whiteboard_actions/: README.md  __init__.py  default.py  default_with_assignee_and_status.py  example.py
jbi/whiteboard_tags/: example.json  proton.json
src/app/: api.py  configuration.py  environment.py  log.py  main.py  monitor.py  router.py
src/core/: actions.py  config.py  configurator.py
src/jbi/: __init__.py  actions.py  bugzilla.py  bugzilla_objects.py  configuration.py  errors.py  model.py  models.py  process.py  router.py  runner.py  service.py  services.py
src/jbi/whiteboard_actions/: README.md  __init__.py  default.py  default_with_assignee_and_status.py  example.py
src/jbi/whiteboard_tags/: README.md  example.json  new_tag.json  proton.json
src/static/: styles.css
src/templates/: powered_by_template.html
tests/: conftest.py
tests/fixtures/: bad-config.yaml  bugzilla_action.py  factories.py  noop_action.py  test_retry_file.json
tests/infra/: docker-compose.lint.yaml  docker-compose.test.yaml
tests/integration/: test_jira_creation.py
tests/mock_jbi_files/: bad.json
tests/unit/: conftest.py  test_actions.py  test_app.py  test_bugzilla.py  test_config.py  test_configuration.py  test_environment.py  test_gunicorn_conf.py  test_jbi.py  test_main.py  test_models.py  test_queue.py  test_retry.py  test_router.py  test_runner.py  test_services.py  test_steps.py
tests/unit/actions/: test_default.py  test_default_with_assignee_and_status.py  test_steps.py
tests/unit/app/: bad-config.yaml  conftest.py  test_api.py  test_configuration.py  test_environment.py  test_main.py  test_monitor.py  test_router.py  test_sentry.py
tests/unit/bugzilla/: test_client.py  test_models.py  test_service.py
tests/unit/core/: test_actions.py  test_config.py  test_configurator.py
tests/unit/core/mock_actions/: some_mock.py
tests/unit/core/mock_config_files/: disabled.json  enabled.json
tests/unit/jbi/: bugzilla_action.py  noop_action.py  test-config.yaml  test_bugzilla.py  test_configuration.py  test_jbi.py  test_models.py  test_router.py  test_runner.py  test_services.py
tests/unit/jbi/mock_jbi_files/: good.json
tests/unit/jbi/whiteboard_actions/: test_default.py  test_default_with_assignee_and_status.py
tests/unit/jira/: test_client.py  test_md2jira.py  test_queue.py  test_service.py  test_utils.py
tests/unit/mock_actions/: __init__.py
tests/unit/mock_config_files/: unknown_action.json
tests/unit/services/: test_bugzilla.py  test_jira.py
tests/unit/whiteboard_actions/: test_default.py  test_default_with_assignee_and_status.py
